# AxPlugSystem

./: .gitignore  CMakeLists.txt  LICENSE  README.md  implementation_plan.md
docs/: AxPlug.md  AxPlug_Dev.md  EventBus.md  EventBus_Dev.md  EventBus_Requirements.md  ImageUnifyService.md  ImageUnifyService_Dev.md  Release_Guide.md  build_options.md  未来设计.md
include/AxPlug/: AxEventBus.h  AxException.h  AxPlug.h  AxPluginExport.h  AxProfiler.h  IAxObject.h  OSUtils.hpp  WinsockInit.hpp
include/business/: IBoostFeatures.h  IMath.h
include/core/: IImageUnifyService.h  INetworkEventBus.h  LoggerService.h  Unify.hpp  UnifyToCv.hpp  UnifyToHalcon.hpp  UnifyToQt.hpp
include/driver/: ITcpClient.h  ITcpServer.h  IUdpSocket.h
scripts/: build_debug_no_test.bat  build_debug_with_test.bat  build_publish_debug.bat  build_publish_release.bat  build_release_no_test.bat  build_release_with_test.bat  build_test.bat
src/AxCore/: AxCoreDll.cpp  AxCoreDll.def  AxPluginManager.cpp  AxPluginManager.h  AxPluginManagerImpl.h  AxProfiler.cpp  CMakeLists.txt  DefaultEventBus.cpp  DefaultEventBus.h
src/business/MathPlugin/: CMakeLists.txt
src/business/MathPlugin/include/: MathPlugin.h
src/business/MathPlugin/src/: MathPlugin.cpp  module.cpp
src/core/ImageUnifyService/: CMakeLists.txt
src/core/ImageUnifyService/include/: ImageUnifyService.h
src/core/ImageUnifyService/src/: ImageUnifyService.cpp  module.cpp
src/core/LoggerService/: CMakeLists.txt
src/core/LoggerService/include/: LoggerService.h
src/core/LoggerService/src/: LoggerService.cpp  module.cpp
src/core/NetworkEventBus/: CMakeLists.txt  NetworkEventBusImpl.cpp  NetworkEventBusImpl.h  module.cpp
src/driver/TcpClient/: CMakeLists.txt  CMakeLists_Lite.txt
src/driver/TcpClient/include/: BoostTcpClient.h  BoostTcpClientLite.h  TcpClient.h
src/driver/TcpClient/src/: BoostTcpClient.cpp  BoostTcpClientLite.cpp  TcpClient.cpp  boost_lite_module.cpp  boost_module.cpp  module.cpp
src/driver/TcpServer/: CMakeLists.txt
src/driver/TcpServer/include/: BoostTcpServer.h  TcpServer.h
src/driver/TcpServer/src/: BoostTcpServer.cpp  TcpServer.cpp  boost_module.cpp  module.cpp
src/driver/UdpSocket/: CMakeLists.txt
src/driver/UdpSocket/include/: BoostUdpSocket.h  UdpSocket.h
src/driver/UdpSocket/src/: BoostUdpSocket.cpp  UdpSocket.cpp  boost_module.cpp  module.cpp
test/: CMakeLists.txt
test/src/: event_bus_test.cpp  image_unify_test.cpp  logger_test.cpp  named_binding_test.cpp  network_test.cpp  plugin_system_test.cpp
